code25_all/scala/7230808.txt
trait Trait
class Class extends Trait with Trait

<console>:8: error: trait Trait is inherited twice
       class Class extends Trait with Trait
                           ^
<console>:8: error: trait Trait is inherited twice
       class Class extends Trait with Trait
                                      ^

trait Trait
class Abstraction extends Trait
class Implementation extends Abstraction with Trait

